--- a/src/css/MovieCard.css
+++ b/src/css/MovieCard.css
@@ -11,6 +11,9 @@
 
 .movie-card:hover {
   transform: translateY(-5px);
+  outline: 3px solid #ffd700;
+  outline-offset: 4px;
+  /* opacity: 1; */
 }
 
 .movie-poster {
@@ -114,6 +117,19 @@
   margin-top: auto;
 }
 
+
+  .visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  white-space: nowrap;
+  border: 0;
+}
+
 @media (max-width: 768px) {
   .movie-card {
     font-size: 0.9rem;
@@ -129,16 +145,5 @@
     font-size: 1.2rem;
   }
 
-  .visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  clip: rect(0 0 0 0);
-  white-space: nowrap;
-  border: 0;
-}
 
 }
